--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     colors: {
                         clifford: '#da373d',
                         'bike-primary': '#E76F51',
+                        'bike-bg': 'rgba(231, 111, 81, 0.1)',
                     }
                 }
             }
@@ -75,11 +76,91 @@
             </div>
         </nav>
 
+        <!-- slider-carousal -->
+        <div class="carousel w-full lg:h-[550px] md:border-2 rounded-xl md:border-orange-400">
+            <!-- slider-1 -->
+            <div id="slide1" class="carousel-item relative w-full bg-bike-bg">
+                <div class="flex flex-col lg:flex-row p-24">
+                    <!-- text content -->
+                    <div class="space-y-7 flex-1">
+                        <h2 class="font-bold text-5xl">Ride-on R15 V4 <br> with Smile</h2>
+                        <p>
+                            Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
+                        </p>
+                        <button class="btn bg-bike-primary text-white">Purchase</button>
+                    </div>
+                    <!-- image content -->
+                    <div class="flex-1">
+                        <img src="./images/slider/bike1.png" class="w-[400px]" />
+                    </div>
+                </div>
+                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide3" class="btn btn-circle">❮</a>
+                    <a href="#slide2" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+
+            <!-- slider-2 -->
+
+            <div id="slide2" class="carousel-item relative w-full bg-bike-bg">
+                <div class="flex flex-col lg:flex-row p-24">
+                    <!-- text content -->
+                    <div class="space-y-7 flex-1">
+                        <h2 class="font-bold text-5xl">Ride-on R15 V4 <br> with Smile</h2>
+                        <p>
+                            Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
+                        </p>
+                        <button class="btn bg-bike-primary text-white">Purchase</button>
+                    </div>
+                    <!-- image content -->
+                    <div class="flex-1">
+                        <img src="./images/slider/bike2.png" class="w-[400px]" />
+                    </div>
+                </div>
+                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide2" class="btn btn-circle">❮</a>
+                    <a href="#slide3" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <!-- slider-3 -->
+            <div id="slide3" class="carousel-item relative w-full bg-bike-bg">
+                <div class="flex flex-col lg:flex-row p-24">
+                    <!-- text content -->
+                    <div class="space-y-7 flex-1">
+                        <h2 class="font-bold text-5xl">Ride-on R15 V4 <br> with Smile</h2>
+                        <p>
+                            Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
+                        </p>
+                        <button class="btn bg-bike-primary text-white">Purchase</button>
+                    </div>
+                    <!-- image content -->
+                    <div class="flex-1">
+                        <img src="./images/slider/bike3.png" class="w-[400px]" />
+                    </div>
+                </div>
+                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide3" class="btn btn-circle">❮</a>
+                    <a href="#slide1" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+        </div>
+
     </header>
 
     <!-- main section -->
     <main class="md:container mx-auto">
-
+        <section>
+            <h1 class="font-bold text-4xl mt-24 text-center">Fetured Bikes In This Year</h1>
+            <!-- feature bike image -->
+            <div class="grid grid-cols-1 md:grid-cols-3 mt-24 mb-24 place-items-center">
+                <img src="./images/others/feature-bike.png" alt="feature bike">
+                <img src="./images/others/feature-bike.png" alt="feature bike">
+                <img src="./images/others/feature-bike.png" alt="feature bike">
+            </div>
+        </section>
     </main>
 
     <!-- footer section -->
