completed news section

--- a/index.html
+++ b/index.html
@@ -152,13 +152,64 @@
 
     <!-- main section -->
     <main class="md:container mx-auto">
-        <section>
+        <!-- feature bike section -->
+        <section class="my-24">
             <h1 class="font-bold text-4xl mt-24 text-center">Fetured Bikes In This Year</h1>
             <!-- feature bike image -->
-            <div class="grid grid-cols-1 md:grid-cols-3 mt-24 mb-24 place-items-center">
+            <div class="grid grid-cols-1 md:grid-cols-3 place-items-center my-24">
                 <img src="./images/others/feature-bike.png" alt="feature bike">
                 <img src="./images/others/feature-bike.png" alt="feature bike">
                 <img src="./images/others/feature-bike.png" alt="feature bike">
+            </div>
+        </section>
+
+        <!-- Latest News Section -->
+        <section class="py-24">
+            <h3 class="font-bold text-5xl text-center mb-12">Latest News</h3>
+            <!-- news card -->
+            <div class="grid grid-cols-1 mx-5 md:grid-cols-2 lg:grid-cols-3 gap-12">
+                <!-- card-1 -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure>
+                        <img src="./images/others/latest1.png" alt="News" />
+                    </figure>
+                    <div class="card-body space-y-5">
+                        <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn bg-bike-primary text-white">Read More</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- card-2 -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure>
+                        <img src="./images/others/latest2.png" alt="News" />
+                    </figure>
+                    <div class="card-body space-y-5">
+                        <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn bg-bike-primary text-white">Read More</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- card-3 -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure>
+                        <img src="./images/others/latest3.png" alt="News" />
+                    </figure>
+                    <div class="card-body space-y-5">
+                        <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn bg-bike-primary text-white">Read More</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
