reviews section completed

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         clifford: '#da373d',
                         'bike-primary': '#E76F51',
                         'bike-bg': 'rgba(231, 111, 81, 0.1)',
+                        'name-title': 'rgba(35, 166, 240, 1)',
                     }
                 }
             }
@@ -211,6 +212,103 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <!-- Clients Reviews Section -->
+
+        <section class="py-24">
+            <h3 class="font-bold text-5xl text-center py-24">Happy <span class="text-orange-400">Clients says</span></h3>
+
+            <!-- clients card section -->
+                <div class="px-5 grid grid-cols-1 gap-10 md:grid-cols-2 lg:grid-cols-3">
+                    <!-- reviews-1 -->
+                    <div class="space-y-5 text-center shadow-lg px-20 py-7 rounded-xl">
+
+                        <!-- avatar -->
+                        <div class="avatar">
+                            <div class="ring-primary ring-offset-base-100 w-24 rounded-full ring ring-offset-2">
+                                <img src="./images/others/user-1.png" />
+                            </div>
+                        </div>
+
+                        <p>
+                            Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.
+                        </p>
+
+                        <div class="rating">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+
+                        <p class="text-name-title">Regina Miles</p>
+                        <p class="font-bold">Banker</p>
+                    </div>
+                    <!-- reviews-2 -->
+                    <div class="space-y-5 text-center shadow-lg px-20 py-7 rounded-xl">
+
+                        <!-- avatar -->
+                        <div class="avatar">
+                            <div class="ring-primary ring-offset-base-100 w-24 rounded-full ring ring-offset-2">
+                                <img src="./images/others/user-2.png" />
+                            </div>
+                        </div>
+
+                        <p>
+                            Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.
+                        </p>
+
+                        <div class="rating">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+
+                        <p class="text-name-title">Regina Miles</p>
+                        <p class="font-bold">Banker</p>
+                    </div>
+                    <!-- reviews-3 -->
+                    <div class="space-y-5 text-center shadow-lg px-20 py-7 rounded-xl">
+
+                        <!-- avatar -->
+                        <div class="avatar">
+                            <div class="ring-primary ring-offset-base-100 w-24 rounded-full ring ring-offset-2">
+                                <img src="./images/others/user-3.png" />
+                            </div>
+                        </div>
+
+                        <p>
+                            Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.
+                        </p>
+
+                        <div class="rating">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+
+                        <p class="text-name-title">Regina Miles</p>
+                        <p class="font-bold">Banker</p>
+                    </div>
+
         </section>
     </main>
 
