faq section completed

--- a/index.html
+++ b/index.html
@@ -217,101 +217,151 @@
         <!-- Clients Reviews Section -->
 
         <section class="py-20">
-            <h3 class="font-bold text-5xl text-center py-24">Happy <span class="text-orange-400">Clients says</span></h3>
+            <h3 class="font-bold text-5xl text-center py-24">Happy <span class="text-orange-400">Clients says</span>
+            </h3>
 
             <!-- clients card section -->
-                <div class="px-5 grid grid-cols-1 gap-10 md:grid-cols-2 lg:grid-cols-3">
-                    <!-- reviews-1 -->
-                    <div class="space-y-5 text-center shadow-lg px-20 py-7 rounded-xl">
+            <div class="px-5 grid grid-cols-1 gap-10 md:grid-cols-2 lg:grid-cols-3">
+                <!-- reviews-1 -->
+                <div class="space-y-5 text-center shadow-lg px-20 py-7 rounded-xl">
 
-                        <!-- avatar -->
-                        <div class="avatar">
-                            <div class="ring-primary ring-offset-base-100 w-24 rounded-full ring ring-offset-2">
-                                <img src="./images/others/user-1.png" />
-                            </div>
+                    <!-- avatar -->
+                    <div class="avatar">
+                        <div class="ring-primary ring-offset-base-100 w-24 rounded-full ring ring-offset-2">
+                            <img src="./images/others/user-1.png" />
                         </div>
-
-                        <p>
-                            Slate helps you see how
-                            many more days you need
-                            to work to reach your financial
-                            goal for the month and year.
-                        </p>
-
-                        <div class="rating">
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
-                                checked="checked" />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                        </div>
-
-                        <p class="text-name-title">Regina Miles</p>
-                        <p class="font-bold">Banker</p>
                     </div>
-                    <!-- reviews-2 -->
-                    <div class="space-y-5 text-center shadow-lg px-20 py-7 rounded-xl">
 
-                        <!-- avatar -->
-                        <div class="avatar">
-                            <div class="ring-primary ring-offset-base-100 w-24 rounded-full ring ring-offset-2">
-                                <img src="./images/others/user-2.png" />
-                            </div>
-                        </div>
+                    <p>
+                        Slate helps you see how
+                        many more days you need
+                        to work to reach your financial
+                        goal for the month and year.
+                    </p>
 
-                        <p>
-                            Slate helps you see how
-                            many more days you need
-                            to work to reach your financial
-                            goal for the month and year.
-                        </p>
-
-                        <div class="rating">
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
-                                checked="checked" />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                        </div>
-
-                        <p class="text-name-title">Regina Miles</p>
-                        <p class="font-bold">Banker</p>
+                    <div class="rating">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="checked" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                     </div>
-                    <!-- reviews-3 -->
-                    <div class="space-y-5 text-center shadow-lg px-20 py-7 rounded-xl">
 
-                        <!-- avatar -->
-                        <div class="avatar">
-                            <div class="ring-primary ring-offset-base-100 w-24 rounded-full ring ring-offset-2">
-                                <img src="./images/others/user-3.png" />
-                            </div>
+                    <p class="text-name-title">Regina Miles</p>
+                    <p class="font-bold">Banker</p>
+                </div>
+                <!-- reviews-2 -->
+                <div class="space-y-5 text-center shadow-lg px-20 py-7 rounded-xl">
+
+                    <!-- avatar -->
+                    <div class="avatar">
+                        <div class="ring-primary ring-offset-base-100 w-24 rounded-full ring ring-offset-2">
+                            <img src="./images/others/user-2.png" />
                         </div>
-
-                        <p>
-                            Slate helps you see how
-                            many more days you need
-                            to work to reach your financial
-                            goal for the month and year.
-                        </p>
-
-                        <div class="rating">
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
-                                checked="checked" />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                        </div>
-
-                        <p class="text-name-title">Regina Miles</p>
-                        <p class="font-bold">Banker</p>
                     </div>
+
+                    <p>
+                        Slate helps you see how
+                        many more days you need
+                        to work to reach your financial
+                        goal for the month and year.
+                    </p>
+
+                    <div class="rating">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="checked" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    </div>
+
+                    <p class="text-name-title">Regina Miles</p>
+                    <p class="font-bold">Banker</p>
+                </div>
+                <!-- reviews-3 -->
+                <div class="space-y-5 text-center shadow-lg px-20 py-7 rounded-xl">
+
+                    <!-- avatar -->
+                    <div class="avatar">
+                        <div class="ring-primary ring-offset-base-100 w-24 rounded-full ring ring-offset-2">
+                            <img src="./images/others/user-3.png" />
+                        </div>
+                    </div>
+
+                    <p>
+                        Slate helps you see how
+                        many more days you need
+                        to work to reach your financial
+                        goal for the month and year.
+                    </p>
+
+                    <div class="rating">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="checked" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    </div>
+
+                    <p class="text-name-title">Regina Miles</p>
+                    <p class="font-bold">Banker</p>
+                </div>
 
         </section>
-    </main>
 
+        <!-- FAQ Section -->
+        <section class="my-24">
+            <h3 class="font-bold text-5xl text-center mb-12">Frequently Asked <span
+                    class="text-orange-400">Questions</span></h3>
+            <!-- faq hero section -->
+            <div class="hero">
+                <div class="hero-content flex-col lg:flex-row gap-20">
+                    <img src="./images/others/faq.png" class="max-w-md rounded-lg" />
+
+                    <!-- FAQ Content -->
+                    <div class="space-y-5">
+                        <div class="collapse collapse-arrow border border-blue-100">
+                            <input type="radio" name="my-accordion-2" checked="checked" />
+                            <div class="collapse-title text-xl font-medium">
+                                What are the most important things I should know about riding a bike?
+                            </div>
+                            <div class="collapse-content">
+                                <p>
+                                    Safety First! Always obey the rules of the road. Obey all traffic signals, signs,
+                                    and laws. Get in the mindset of “driving” your bike—not just “riding” your bike.
+                                    This will help you be a more focused and legally compliant bike rider.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-arrow border border-blue-100">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">
+                                What are the most important things I should know about riding a bike?
+                            </div>
+                            <div class="collapse-content">
+                                <p>
+                                    Safety First! Always obey the rules of the road. Obey all traffic signals, signs,
+                                    and laws. Get in the mindset of “driving” your bike—not just “riding” your bike.
+                                    This will help you be a more focused and legally compliant bike rider.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-arrow border border-blue-100">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">
+                                What are the most important things I should know about riding a bike?
+                            </div>
+                            <div class="collapse-content">
+                                <p>
+                                    Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. 
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <!-- footer section -->
     <footer>
 
