completed footer section

--- a/index.html
+++ b/index.html
@@ -361,10 +361,36 @@
                 </div>
             </div>
         </section>
+
     </main>
     <!-- footer section -->
-    <footer>
-
+    <footer class="mt-24 footer bg-black text-white p-10">
+            <div class="container mx-auto text-center">
+                <div class="space-x-4 mb-2">
+                    <a href="#" class="hover:text-white">Download Now</a>
+                    <a href="#" class="hover:text-white">License</a>
+                </div>
+                <div class="space-x-4 mb-2">
+                    <a href="#" class="hover:text-white">About</a>
+                    <a href="#" class="hover:text-white">Features</a>
+                    <a href="#" class="hover:text-white">Pricing</a>
+                    <a href="#" class="hover:text-white">Careers</a>
+                    <a href="#" class="hover:text-white">Help</a>
+                    <a href="#" class="hover:text-white">Privacy Policy</a>
+                </div>
+                <p class="mt-4">© 2020 bike. All rights reserved</p>
+            </div>
+            <nav>
+              <h6 class="text-white mb-3">Get the App</h6>
+              <div class="grid grid-cols-1 gap-4">
+                <a>
+                    <img class="w-36" src="./images/others/ios.png" alt="ios logo">
+                </a>
+                <a>
+                    <img class="w-36" src="./images/others/android.png" alt="android logo">
+                </a>
+              </div>
+            </nav>
     </footer>
 </body>
 
